# Hermes-Core

./: .env.example  .gitignore  README.md  pyproject.toml
docs/hermes/: 00-overview.md  01-core-components.md  02-new-project-workflow.md  03-issue-fix-workflow.md  04-agent-profiles.md  05-self-learning-memory.md  06-security-permissions.md  07-dtt-ai-integration-contract.md  08-first-proof-of-concept.md  09-interactive-session-resume.md  10-dtt-ai-larv-skill-contract.md  11-dtt-ai-handoff.md  12-dtt-ai-runtime-bridge-spike.md  13-dtt-ai-request-user-input-resolution.md  14-dtt-ai-ssh-tmux-runtime-spike.md  15-dtt-ai-ssh-host-resolution.md  16-dtt-ai-final-tmux-prompt-answer-proof.md  17-dtt-ai-hermes-lifecycle-wrapping.md  (+6 more)
profiles/: hermes-backend.yaml  hermes-database.yaml  hermes-frontend.yaml  hermes-manager.yaml  hermes-project-manager.yaml  hermes-qa.yaml  hermes-triage.yaml
tests/: test_api.py  test_api_interactive_runtime.py  test_api_larv_skill_reporting.py  test_api_new_project.py  test_artifact_ingestion.py  test_cli.py  test_cli_interactive_runtime.py  test_cli_new_project.py  test_dtt_ai_client.py  test_dtt_ai_environment_validation.py  test_dtt_ai_larv_skill_smoke.py  test_events.py  test_execution.py  test_interactive_runtime.py  test_interactive_sessions.py  test_larv_contract_hardening.py  test_larv_skill_reporting.py  test_larv_skill_status.py  test_memory.py  test_minimax.py  test_new_project_workflow.py  test_policy.py  test_profiles.py  test_runs.py
tools/: build-hermes-docs.mjs  dtt_ai_larv_skill_smoke.py  validate_dtt_ai_environment.py
(+45 files in other folders)
